# czml3-ext

./: .gitignore  README.md  out.txt  pyproject.toml
.github/workflows/: publish-to-pypi.yml  workflow.yml
examples/: basics.ipynb  basics.py  coverage.ipynb  coverage.py  coverage_amount.ipynb  data.tif  data_cut.tif  examples.ipynb  time_based.ipynb  time_based.py
src/czml3_ext/: colours.py  helpers.py  packets.py  rasters.py
src/czml3_ext/borders/: F16.billboard  F22.billboard  UAE.border  afghanistan.border  djibouti.border  iran.border  jordan.border  lebanon.border  oman.border  pakistan.border  small_boat.billboard  somalia.border  syria.border  turkey.border  yemen.border
src/czml3_ext/data/: cyprus.border  egypt.border  eritrea.border  ethiopia.border  iraq.border  israel.border  israel_noWB.border  qatar.border  saudi_arabia.border  speed_boat.billboard  sudan.border  turkmenistan.border  west_bank.border
tests/: test_colours.py  test_examples.py  test_helpers.py  test_packets.py  test_readme.py
