
[build-system]
requires = ["wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "czml3-ext"
authors = [
    {name = "Daniel Stoops", email = "google@gmail.com"},
]
description = "Create packets of CZML3"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=2.0.0",
    "shapely>=2.0.5",
    "scikit-image>=0.24.0",
    "czml3>=1.0.2",
    "transforms84>=0.3.2",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "ruff>=0.5.1",
    "pytest>=8.2.2",
    "mypy>=1.10.1",
    "tox>=4.16.0",
    "pytest-cov>=5.0.0",
]
dev = [
    "ruff>=0.5.1",
    "pytest>=8.2.2",
    "mypy>=1.10.1",
    "tox>=4.16.0",
    "pytest-cov>=5.0.0",
    "build",
]
examples = [
    "jupyterlab>=4.2.3",
    "shapely>=2.0.4",
    "rasterio>=1.3.11",
]

[project.urls]
Homepage = "https://github.com/Stoops-ML/czml3-ext"
Repository = "https://github.com/Stoops-ML/czml3-ext"
Issues = "https://github.com/Stoops-ML/czml3-ext/issues"

[tool.setuptools.dynamic]
version = {attr = "czml3_ext.__version__"}

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.setuptools.package-data]
czml3_ext = [
    "src/czml3_ext/data/*.border",
    "src/czml3_ext/data/*.billboard",
    "tests/saved_czmls/*.czml",
]

[tool.ruff]
exclude = [
    "old",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-include = ["*.ipynb"]
src = ["src", "tests"]

[tool.ruff.lint]
ignore = [
    "UP007",
    "E501",
    "F821"  # to support Python 3.9
]
select = ["E", "F", "UP", "B", "SIM", "I"]


[tool.mypy]
files = [
    "src/czml3_ext/**/*.py",
    "tests/**/*.py",
]
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
disallow_any_generics = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "numpy.typing"
plugins = "mypy_plugin"

# Ignore certain missing imports
[[tool.mypy.overrides]]
module = ["pytest.*", "transforms84.*", "shapely.*"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = quality, py{310,311,312,313}

    [gh-actions]
    python =
        3.9: py39
        3.10: py310
        3.11: py311, quality
        3.12: py312
        3.13: py313

    [testenv]
    basepython =
        py39: {env:PYTHON:python3.9}
        py310: {env:PYTHON:python3.10}
        py311: {env:PYTHON:python3.11}
        py312: {env:PYTHON:python3.12}
        py313: {env:PYTHON:python3.13}
        {quality}: {env:PYTHON:python3}
    setenv =
        PYTHONUNBUFFERED = yes
    extras = tests
    commands =
        pytest
        mypy

    [testenv:quality]
    description = checks code quality
    deps =
        ruff
        setuptools-scm
        wheel
        build
    skip_install = true
    commands =
        ruff check
        ruff format --diff
        python -m build --wheel
"""
